<resources>
    <string name="app_name">MZKClone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MZK</string>
    <string name="nav_header_subtitle">Koszalin</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_tickets">My tickets</string>
    <string name="menu_ticket_control">Ticket control</string>
    <string name="menu_buy_ticket">Buy ticket</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_change_pin">Change PIN</string>
    <string name="menu_logout">Logout</string>

    <string name="profile_label_name">Name</string>
    <string name="profile_label_last_name">Last name</string>
    <string name="profile_label_personal_id_number">Personal ID number</string>
    <string name="profile_label_telephone_number">Telephone number</string>
    <string name="profile_button_edit_profile">EDIT PROFILE</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>


    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="pin_fragment_label">Pin Fragment</string>
    <string name="next">NEXT</string>
    <string name="previous">Previous</string>

    <string name="app_name_mzk">Mobile City Card</string>

    <string name="login_login">LOGIN</string>
    <string name="login_register">REGISTER</string>

    <string name="login_pin_ok">OK</string>
    <string name="pin_login_info">LOG IN WITH PIN.</string>
    <string name="forgot_pin">FORGOT PIN</string>

    <string name="type_pin">Type PIN</string>

    <string name="hello_login_fragment">Hello first fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="register_text_welcome">Welcome!</string>
    <string name="register_text_info1">We are glad that you are joining the group of users of the Koszalin Mobile City Card.</string>
    <string name="register_text_info2">Our goal is to make the application a great convenience in the everyday life of the residents and visitors of Koszalin.</string>

    <string name="checkDeclare">I declare that I am over 13 years old and I agree to the processing of the personal data by XYZ in the above-mentioned scope for the purpose of purchasing a monthly ticker in accordance with the Regulations. I have read the instruction regarding the right of access to my data and the possibility of correcting it. I am aware that my consent my be revoked at any time *</string>
    <string name="checkRules">Accept rules</string>

    <string name="buttonRegister">REGISTER</string>

    <!-- Strings used for fragments for navigation - REGISTER -->
    <string name="first_fragment_label">Register info</string>
    <string name="second_fragment_label">Register form</string>

    <string name="buy_single_regular">Single \nregular</string>
    <string name="buy_single_discount">Single \ndiscount</string>

    <string name="change_pin_button">Change PIN</string>

    <string name="set_as_used">Set as Used</string>
    <string name="close">Close</string>

    <string name="update">Update</string>
    <string name="cancel">Cancel</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>