<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_tickets"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_my_tickets" />
        <item
            android:id="@+id/nav_ticket_control"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_ticket_control" />
        <item
            android:id="@+id/nav_buy_ticket"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_buy_ticket" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_change_pin"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_change_pin" />
    </group>
</menu>