<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_tickets">

    <fragment
        android:id="@+id/nav_my_tickets"
        android:name="pl.rikwo.mzkclone.ui.myTickets.MyTicketsFragment"
        android:label="@string/menu_my_tickets"
        tools:layout="@layout/fragment_my_tickets" />

    <fragment
        android:id="@+id/nav_ticket_control"
        android:name="pl.rikwo.mzkclone.ui.ticketControl.TicketControlFragment"
        android:label="@string/menu_ticket_control"
        tools:layout="@layout/fragment_ticket_control" />

    <fragment
        android:id="@+id/nav_buy_ticket"
        android:name="pl.rikwo.mzkclone.ui.buyTicket.BuyTicketFragment"
        android:label="@string/menu_buy_ticket"
        tools:layout="@layout/fragment_buy_ticket" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="pl.rikwo.mzkclone.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_change_pin"
        android:name="pl.rikwo.mzkclone.ui.changePin.ChangePinFragment"
        android:label="@string/menu_change_pin"
        tools:layout="@layout/fragment_change_pin" />
</navigation>